vendor/fixed-macro/tests/compile-fail/invalid-type-06.rs
fn main() {
    fixed_macro::fixed!(0123: I16F129);
}
